2007-05-17  Boyd Timothy <btimothy@gmail.com> 

	* Banter/PersonGroup.cs: Create a TreeStore even in the case where the
	  group is created w/o a real EDS Contact so that UpdateModel doesn't
	  blow chunks when a user creates a new group.

2007-05-17  Boyd Timothy <btimothy@gmail.com> 

	* Banter/GroupWindow.cs: Added code to allow the user to delete a
	  group.

2007-05-17  Calvin Gaisford <calvinrg@gmail.com> 

	* data/banter.desktop.in: Added a desktop file for the banter
	  application
	* data/Makefile.am: updated the Makefile to handle the
	  banter.application file

2007-05-17  Boyd Timothy <btimothy@gmail.com> 

	* Banter/HIGMessageDialog.cs: Modified so that the ExtraWidget gets
	  placed in-line with the message text.

2007-05-17  Boyd Timothy <btimothy@gmail.com> 

	* Banter/GroupWindow.cs: Started the code to add a new group.  The new
	  group is being added, but for some reason it's crashing.
	* Banter/HIGMessageDialog.cs: Allow an extra widget to be placed in the
	  dialog.  This still needs to be cleaned up so it aligns to the
	  right of the dialog image.  It's at least "functional" though.

2007-05-17  Boyd Timothy <btimothy@gmail.com> 

	* configure.ac: Remove Banter/banter from the AC_CONFIG_FILES since the
	  Banter/Makefile.am takes care of building the script.
	* Banter/banter.in: Changed the libdir to use @pkglibdir@ now that the
	  Makefile.am takes care of parsing/building the file.

2007-05-17  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/PersonGroup.cs: Added RemovePerson method to remove a person

2007-05-17  Boyd Timothy <btimothy@gmail.com> 

	* Banter.mdp, Banter/HIGMessageDialog.cs, Banter/Makefile.am: Added
	  HIGMessageDialog.cs from the tomboy project.

2007-05-17  Boyd Timothy <btimothy@gmail.com> 

	* Banter/Preferences.cs: Don't attempt to set an empty array of
	  saved_windows if the key doesn't exist.  This prevents the ugly
	  error message in the output.

2007-05-17  Boyd Timothy <btimothy@gmail.com> 
